--- a/index.html
+++ b/index.html
@@ -89,16 +89,18 @@
           <div class="container" >   
             <div class="well">
               <h2>About me</h2>
-              <p>I am a computer science and mathematics double major at the Universtiy of Massachusetts Amherst.</p>
-            </div>
-            <div class="well">
-              <h2>Background</h2>
-              <p>As you may know by now my name is Matt and I'm currently a student at the University of 
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/1ZsiCwKIp_k" 
+                frameborder="0" allowfullscreen >
+              <p>I'm currently a student at the University of 
                  Massachusetts Amherst. I am studying Computer Science and Computational Mathematics. Outside of class I'm
                 a member of the University of Massachusetts Minuteman Marching Band and I play the trumpet. I have been playing
                  the trumpet for about a decade and I am trying to learn how to play the guitar. I'm also part of the bands
                  Administrative staff, I help manage the bands website which you can check out <a href="http://www.umass.edu/band/">
-                  here</a>
+                  here</a>.</p>
+            </div>
+            <div class="well">
+              <h2>Background</h2>
+              <p>
               </p>
             </div>
           </div>
