--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             </div>  
              <div class="container"> 
                <div class="btn-group btn-group-lg">
+                    <a href="google.com" class="btn btn-primary" role="button">Projects</a>
                     <button type="button" class="btn btn-primary">Projects</button>
                     <button type="button" class="btn btn-primary">Interests</button>
                     <button type="button" class="btn btn-primary">Current Work</button>
