--- a/index.html
+++ b/index.html
@@ -1,29 +1,7 @@
 <html lang="en">
     <title>Something Clever</title>
-    <!--<link rel="stylesheet" type="text/css" href="HomePageBackground.css">
-      <div>
-        <img src="images/natureheader.gif" alt="Logo" style="position:absolute;width:100%;height:347px;margin:0px;margin-top:-22px;">
-        <div class = "logo">
-            <img src="images/profilepicture.jpg" alt="Logo" style="width:225px;height:225px; padding:1px">
-            <h2 class = "logo"> Matthew Lydigsen </h2>
-        </div>  
-        <div class = "tabContent">
-            <!--<script>
-              var isHovering = ("tabContent").is(":hovering");
-                if(isHovering){
-                    document.getElementById("tab").innerHTML = "images/projectsTabNotLighted.jpg";
-                }
-                else{
-                    document.getElementById("tab").innerHTML = "images/projectstablighted.jpg";
-                }
-            </script>
-            <form action="Projects.html" id = "tabs">
-                <input type="image" src=<var id = "tab"> style="width:135px; 
-                height:41px; padding-top: 0px; margin-left:15%; padding-left:8px;" alt="Submit">";
-            </form>-->
-     <!--   
 
-          <h1 class = "sections">Interest</h1>
+    <!--      <h1 class = "sections">Interest</h1>
           <hr>
           <p class = "body"> If you haven't figure out by now i'm kind of a nerd. I love watching TV some of my favorite
           shows are Star Trek, Walking Dead, Game of Thrones, Doctor Who, just to name a few. I have seen almost every
@@ -31,7 +9,7 @@
           I play games such as Halo, League of Legends, Star Craft, and Fallout just to name a few. If anyone wants to
           play some league with me feel free to message me my account name is Halo TrumpetGod. Some of my other interests
           including building models, playing soccer, and listening to music mostly rap but some pop and rock as well.</p>
--->
+    -->
         <head>
           <meta charset="utf-8">
           <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -75,7 +53,7 @@
                 a member of the University of Massachusetts Minuteman Marching Band and I play the trumpet. I have been playing
                  the trumpet for about a decade and I am trying to learn how to play the guitar. I'm also part of the bands
                  Administrative staff, I help manage the bands website which you can check out <a href="http://www.umass.edu/band/">
-                  here</a>. Feel free to click on the image in the top right corner to check out my linked page</p>
+                  here</a>. Feel free to click on the image in the top right corner to check out my linkedin page</p>
             </div>
             <div class="well">
               <h2>FIRST Robotics</h2>
