--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
           <meta charset="utf-8">
           <meta http-equiv="X-UA-Compatible" content="IE=edge">
           <meta name="viewport" content="width=device-width, initial-scale=1">
-          <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-          <title>Bootstrap 101 Template</title>
 
           <!-- Bootstrap -->
           <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -27,7 +25,6 @@
         </head>
         <body>
             <div class="jumbotron" style="background-color:#99bbff;">
-                <!--<div style="float: right;">-->
                 <a href="https://www.linkedin.com/in/matthew-lydigsen-20b755b5">
                     <img src="images/profilepicture.jpg" class="img-rounded" style="width:150px;height:150px; padding:0px;top: 20px; right:30px; position:absolute;">
                 </a>
@@ -48,16 +45,15 @@
                 frameborder="0" allowfullscreen ></iframe>
               </center>
               <br>
-              <p>I'm currently a student at the University of 
-                 Massachusetts Amherst. I am studying Computer Science and Computational Mathematics. Outside of class I'm
-                a member of the University of Massachusetts Minuteman Marching Band and I play the trumpet. I have been playing
+              <p>I'm currently a student at the University of Massachusetts Amherst. I am studying Computer Science and 
+                 Computational Mathematics. Outside of class I'm a member of the University of Massachusetts Minuteman Marching Band and I play the trumpet. I have been playing
                  the trumpet for about a decade and I am trying to learn how to play the guitar. I'm also part of the bands
                  Administrative staff, I help manage the bands website which you can check out <a href="http://www.umass.edu/band/">
                   here</a>. Feel free to click on the image in the top right corner to check out my linkedin page</p>
             </div>
             <div class="well">
               <h2>FIRST Robotics</h2>
-               <p class = "body">This video above is of my FRC team back in 2013 at the Boston State Regional Finals. Our team
+               <p>This video above is of my FRC team back in 2013 at the Boston State Regional Finals. Our team
                 one the regional that year as well as the Chairman's award. Since sophomore year of high school i have been
                 heavily involved in FIRST. FIRST allows high school students working along with adult mentors to build 120 
                  pound robots to accomplish challenges FIRST presents every year. The challenge in the video above is
