--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
              </div>
           <div class="container">   
             <div class="well">
-              <h2>About me</h2>
+              <h2><b>About me</b></h2>
               <center>  
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/1ZsiCwKIp_k" 
                 frameborder="0" allowfullscreen ></iframe>
@@ -60,7 +60,7 @@
                   here</a>. Feel free to click on the image in the top right corner to check out my linkedin page</p>
             </div>
             <div class="well">
-              <h2>FIRST Robotics</h2>
+              <h2><b>FIRST Robotics</b></h2>
                <p>This video above is of my FRC team back in 2013 at the Boston State Regional Finals. Our team
                 one the regional that year as well as the Chairman's award. Since sophomore year of high school i have been
                 heavily involved in FIRST. FIRST allows high school students working along with adult mentors to build 120 
