--- a/Projects.html
+++ b/Projects.html
@@ -20,6 +20,7 @@
              <div class="container"> 
                <div class="btn-group btn-group-lg">
                     <a href="index.html" class="btn btn-primary" role="button">Home</a>
+                    <div class="btn-group btn-group-lg">
                     <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
                       Programming Knowledge <span class="caret"></span></button>
                       <ul class="dropdown-menu" role="menu">
@@ -28,6 +29,7 @@
                         <li><a href="Python.html">Python</a></li>
                         <li><a href="javascript.html">Javascript</a></li>
                       </ul>
+                     </div> 
                     <a href="Projects.html" class="btn btn-primary" role="button">Interests</a>
                     <a href="Projects.html" class="btn btn-primary" role="button">Current Work</a>
                   </div>
