--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
                           <ul class="dropdown-menu" role="menu">
                             <li><a href="java.html">Java</a></li>
                             <li><a href="C.html">C++/C</a></li>
-                            <li><a href="Python.html">Python</a></li>
+                            <li><a href="python.html">Python</a></li>
                             <li><a href="javascript.html">Javascript</a></li>
                           </ul>
                     </div>  
                     <a href="Projects.html" class="btn btn-primary" role="button">Projects</a>
-                    <a href="Projects.html" class="btn btn-primary" role="button">Interests</a>
-                    <a href="Projects.html" class="btn btn-primary" role="button">Current Work</a>
+                    <a href="Interests.html" class="btn btn-primary" role="button">Interests</a>
+                    <a href="Current_Work.html" class="btn btn-primary" role="button">Current Work</a>
                   </div>
              </div>
           <div class="container">   
