--- a/Interests.html
+++ b/Interests.html
@@ -16,7 +16,7 @@
         </head>
         <body>
             <div class="jumbotron" style="background-color:#99bbff;">
-              <h1 style="padding-left:30px;">Projects</h1>
+              <h1 style="padding-left:30px;">Interests</h1>
             </div>  
              <div class="container"> 
                <div class="btn-group btn-group-lg">
