--- a/index.html
+++ b/index.html
@@ -58,7 +58,17 @@
             </div>
             <div class="well">
               <h2><b>About this site</b></h2>
-               <p></p>
+               <p>I created this site using git hub pages and bootstrap. I have done multiple projects involving web programming
+               but it has been primarily work with javascript and database languages including postgresql and mongodb. This
+               site allows me to gain experience in the frontend side of web development. This website also allows me to show
+               in great depth my experience with multiple programming languages which can be seen in the programming knowledge tab.
+               </p>
+            </div>
+            <div class="well">
+              <h2><b>Contact me</b></h2>
+               <p>If there are any questions about myself or if someone is using this site to learn more about software development.
+               Feel free to send me an email at mlydigsen@umass.edu.
+               </p>
             </div>
           </div>
               
