--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <img src="images/linkedinlogo.png" style="width:40px;height:40px;">
             </a>
             <a href="https://www.imgur.com">
-                <img src="images/imgurlogo.png" style="width:40px;height:40px;">
+                <img src="images/imgurlogo.png" style="width:40px;height:40px;padding-left:3;">
             </a>
           </center>    
         </body>
