--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
                 <img src="images/linkedinlogo.png" style="width:40px;height:40px;">
             </a>
             <a href="https://github.com/mattncc1701">
-                <img src="images/githubicon.png" style="width:45px;height:45px;">
+                <img src="images/githubicon.png" style="width:45px;height:45px; padding-left:5;">
             </a>
             <a href="https://www.imgur.com">
-                <img src="images/imgurlogo.png" style="width:40px;height:40px;padding-left:3;">
+                <img src="images/imgurlogo.png" style="width:40px;height:40px;padding-left:8;">
             </a>
           </center>    
         </body>
