--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
             </div>
           </div>
           <center>
-            <a href="https://www.linkedin.com/in/matthew-lydigsen-20b755b5">
+            <a href="https://www.linkedin.com/in/matthew-lydigsen-20b755b5" target="_blank">
                 <img src="images/linkedinlogo.png" style="width:40px;height:40px;">
             </a>
-            <a href="https://github.com/mattncc1701">
+            <a href="https://github.com/mattncc1701" target="_blank">
                 <img src="images/githubicon.png" style="width:50px;height:50px; padding-left:5;">
             </a>
-            <a href="https://www.imgur.com">
+            <a href="https://www.imgur.com" target="_blank">
                 <img src="images/imgurlogo.png" style="width:40px;height:40px;padding-left:8;">
             </a>
           </center>    
