--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </head>
         <body>
             <div class="jumbotron" style="background-color:#99bbff;">
-                <a href="https://www.facebook.com/matt.lydigsen?ref=bookmarks">
+                <a href="https://www.facebook.com/matt.lydigsen?ref=bookmarks" target="_blank">
                     <img src="images/profilepicture.jpg" class="img-rounded" style="width:150px;height:150px; padding:0px;top: 20px; right:30px; position:absolute;">
                 </a>
               <h1 style="padding-left:30px;"> Hi I'm Matt </h1>
@@ -77,7 +77,7 @@
                 <img src="images/linkedinlogo.png" style="width:40px;height:40px;">
             </a>
             <a href="https://github.com/mattncc1701" target="_blank">
-                <img src="images/githubicon.png" style="width:50px;height:50px; padding-left:5;">
+                <img src="images/githubicon.png" style="width:55px;height:50px; padding-left:5;">
             </a>
             <a href="https://www.imgur.com" target="_blank">
                 <img src="images/imgurlogo.png" style="width:40px;height:40px;padding-left:8;">
