--- a/Interests.html
+++ b/Interests.html
@@ -44,11 +44,17 @@
              
                 <nav class="navbar navbar-inverse navbar-custom">
                    <div class="container-fluid">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                        <div class="navbar-header">
+                          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>                        
-                        </button>
+                          </button>
+                          <a class="navbar-brand" href="https://www.facebook.com/matt.lydigsen?ref=bookmarks" target="_blank"
+                          style="padding:5px;">
+                            <img src="images/profilepicture.jpg" class="img-responsive" width="40" height="40">
+                          </a>
+                        </div>
                       <div class="collapse navbar-collapse" id="myNavbar">
                         <ul class="nav navbar-nav">
                           <li><a href="index.html">Home</a></li>
