--- a/Projects.html
+++ b/Projects.html
@@ -35,7 +35,7 @@
               <h1 style="padding-left:30px;">Projects</h1>
             </div>
                 
-        <div class="row">
+        <div class="row" style="background-color:lavender;">
          <div class="col-sm-6">   
              <nav class="navbar navbar-inverse navbar-custom">
                    <div class="container-fluid">
