--- a/Projects.html
+++ b/Projects.html
@@ -83,8 +83,8 @@
          <div class="col-sm-4">   
           <!--<div class="container"> --> 
                 <!--<div class="well">-->
-                  <h2><b>Downtime Capture System</b></h2>
-                   <p style="line-height: 1.8; margin-left:5px;">This was a Downtime Capture System, using a Raspberry pi, I created to measure when a factory machine stopped 
+                  <h2 style="margin-left:10px;"><b>Downtime Capture System</b></h2>
+                   <p style="line-height: 1.8; margin-left:10px;">This was a Downtime Capture System, using a Raspberry pi, I created to measure when a factory machine stopped 
                    functioning. It would index the time that the machine went down by receiving a signal from the machine. 
                    Then a worker could use a GUI i created to record the reasons why the the machine went down. The reasons it could 
                    go down could be updated at any time from an excel spread sheet. Then once the event had been logged it would send
@@ -101,8 +101,8 @@
         <div class="row" style="background-color:lavenderblush;">
             <div class="col-sm-1"></div>
            <div class="col-sm-4">       
-              <h2><b>Mosaic Creator</b></h2>
-               <p style="line-height: 1.8; margin-left:5px;">Using java, I created a function that makes image mosaics from a large number of smaller images. 
+              <h2 style="margin-left:10px;"><b>Mosaic Creator</b></h2>
+               <p style="line-height: 1.8; margin-left:10px;">Using java, I created a function that makes image mosaics from a large number of smaller images. 
                A product of the code can be seen in my profile picture. In the link <a href="https://github.com/mattncc1701/Image-Effects" target="_blank">
                provided</a>, the code can also create blurring effects, sharpening effects, and contrast changes.</p>
            </div>
@@ -117,8 +117,8 @@
         <div class="row" style="background-color:lavender;">
            <div class="col-sm-1"></div>
            <div class="col-sm-4">    
-              <h2><b>Space Invaders Game</b></h2>
-               <p style="line-height: 1.8; margin-left:5px;">Using java, I recreated the old arcade game space invaders. In past summers I taught
+              <h2 style="margin-left:10px;"><b>Space Invaders Game</b></h2>
+               <p style="line-height: 1.8; margin-left:10px;">Using java, I recreated the old arcade game space invaders. In past summers I taught
                a free java programming course using this program. Each week I would introduce new concepts about java and
                let high school kids who were taking this class fill in the code to this game. By the end of the class
                the students would have a firm knowledge of java and will have programmed much of the game Space Invaders.</p>
@@ -135,8 +135,8 @@
         <div class="row"  style="background-color:lavenderblush;">
            <div class="col-sm-1"></div>
            <div class="col-sm-4">   
-              <h2><b>Plannit</b></h2>
-               <p style="line-height: 1.8; margin-left:5px;">This is a website me and group created for my web programming class. I was the tea leader of a group of six people. 
+              <h2 style="margin-left:10px;"><b>Plannit</b></h2>
+               <p style="line-height: 1.8; margin-left:10px;">This is a website me and group created for my web programming class. I was the tea leader of a group of six people. 
                It is a customization planner app that is built using the mean stack which consists of Mongodb, Express, Angular, and Nodejs. </p>
            </div>    
            <div class="col-sm-1"></div>
@@ -150,8 +150,8 @@
         <div class="row" style="background-color:lavender;">
            <div class="col-sm-1"></div>
            <div class="col-sm-4">       
-              <h2><b>3D Carnival Game</b></h2>
-               <p style="line-height: 1.8; margin-left:5px;">Using OpenGL in Java, I created a 3D Carnival Games system consisting
+              <h2 style="margin-left:10px;"><b>3D Carnival Game</b></h2>
+               <p style="line-height: 1.8; margin-left:10px;">Using OpenGL in Java, I created a 3D Carnival Games system consisting
                of three games Duck Shooter, Balloon popper, and water gun shooter.</p>
            </div>
            <div class="col-sm-1"></div>
