--- a/Projects.html
+++ b/Projects.html
@@ -94,7 +94,7 @@
             <div class="col-sm-1"></div>
             <div class="col-sm-6"> 
                 <center>
-                    <img src="images/javalogo.jpg" class="img-responsive" width = "550" height = "350">
+                    <img src="images/machine.png" class="img-responsive" width = "550" height = "350">
                 </center>
             </div>
         </div>
@@ -110,7 +110,7 @@
            <div class="col-sm-1"></div>
             <div class="col-sm-6"> 
                 <center>
-                    <img src="images/javalogo.jpg" class="img-responsive" width = "550" height = "350">
+                    <img src="images/monalisacombo.png" class="img-responsive" width = "550" height = "350">
                 </center>
             </div>
         </div>    
@@ -126,7 +126,7 @@
             <div class="col-sm-1"></div>
             <div class="col-sm-6"> 
                 <center>
-                    <img src="images/javalogo.jpg" class="img-responsive" width = "550" height = "350">
+                    <img src="images/spaceinvaders.jpg" class="img-responsive" width = "550" height = "350">
                 </center>
             </div>
            
@@ -142,7 +142,7 @@
            <div class="col-sm-1"></div>
             <div class="col-sm-6"> 
                 <center>
-                    <img src="images/javalogo.jpg" class="img-responsive" width = "550" height = "350">
+                    <img src="images/Plannit-logo.png" class="img-responsive" width = "550" height = "350">
                 </center>
             </div>
         </div>
@@ -157,7 +157,7 @@
            <div class="col-sm-1"></div>
             <div class="col-sm-6"> 
                 <center>
-                    <img src="images/javalogo.jpg" class="img-responsive" width = "550" height = "350">
+                    <img src="images/carnivalgames.jpg" class="img-responsive" width = "550" height = "350">
                 </center>
             </div>
         </div>    
