--- a/Projects.html
+++ b/Projects.html
@@ -94,14 +94,14 @@
             <div class="col-sm-1"></div>
             <div class="col-sm-6"> 
                 <center>
-                    <img src="images/machine.png" class="img-responsive" width = "550" height = "350">
+                    <img src="images/machine.png" class="img-responsive" width = "550" height = "350" style="margin:10px;">
                 </center>
             </div>
         </div>
         <div class="row" style="background-color:lavenderblush;">
             <div class="col-sm-6"> 
                 <center>
-                    <img src="images/monalisacombo.png" class="img-responsive" width = "550" height = "350">
+                    <img src="images/monalisacombo.png" class="img-responsive" width = "550" height = "350" style="margin:10px;">
                 </center>
             </div>
             <div class="col-sm-1"></div>
@@ -126,7 +126,7 @@
             <div class="col-sm-1"></div>
             <div class="col-sm-6"> 
                 <center>
-                    <img src="images/spaceinvaders.jpg" class="img-responsive" width = "550" height = "350">
+                    <img src="images/spaceinvaders.jpg" class="img-responsive" width = "550" height = "350" style="margin:10px;">
                 </center>
             </div>
            
@@ -135,7 +135,7 @@
         <div class="row"  style="background-color:lavenderblush;">
             <div class="col-sm-6"> 
                 <center>
-                    <img src="images/Plannit-logo.png" class="img-responsive" width = "550" height = "350">
+                    <img src="images/Plannit-logo.png" class="img-responsive" width = "550" height = "350" style="margin:10px;">
                 </center>
             </div>
            <div class="col-sm-1"></div>
@@ -157,7 +157,7 @@
            <div class="col-sm-1"></div>
             <div class="col-sm-6"> 
                 <center>
-                    <img src="images/carnivalgames.jpg" class="img-responsive" width = "550" height = "350">
+                    <img src="images/carnivalgames.jpg" class="img-responsive" width = "550" height = "350" style="margin:10px;">
                 </center>
             </div>
         </div>    
