--- a/Projects.html
+++ b/Projects.html
@@ -92,7 +92,7 @@
                 <!--</div>-->
             </div>  
             <div class="col-sm-1"></div>
-            <div class="col-sm-6"> 
+            <div class="col-sm-6" style ="border-left: 1px solid #ccc;> 
                 <center>
                     <img src="images/machine.png" class="img-responsive" width = "450" height = "350" style="margin:10px;">
                 </center>
