--- a/Current_Work.html
+++ b/Current_Work.html
@@ -30,7 +30,7 @@
         </style>
         
         <div class="jumbotron_background"> 
-        <body>
+        <body  style="overflow-x:hidden;">
             <div class="jumbotron" style="background-color:#99bbff;">
               <h1 style="padding-left:30px;">Current Work</h1>
             </div>  
